--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ loader.load(
     renderer = new THREE.WebGLRenderer({antialias: true});
     renderer.setClearColor(0x000000, 1);
     renderer.setPixelRatio(window.devicePixelRatio);
-    renderer.setSize(SCREEN_WIDTH, SCREEN_HEIGHT/ratio);
+    renderer.setSize(SCREEN_WIDTH, SCREEN_WIDTH/ratio);
 
     // window.addEventListener('mousemove', onDocumentMouseMove, false);
     // window.addEventListener('mouseup', addBird, false);
