--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ loader.load(
 
       if (boid.uniqueIdentifier == uniqueIdentifier)
       {
-        // console.log("Found");
+        console.log("Found");
 
         var item;
 
