--- a/index.html
+++ b/index.html
@@ -870,6 +870,7 @@ loader.load(
         } 
       break;
       default:
+        console.log(JSON.stringify(parsedMessage));
       break;
     }
   }
