--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@ loader.load(
         selectBird(parsedMessage.data.userId);
         lastBird = Date.now();
       break;
-      case "selectBird":
+      case "selectBirds":
         selectBird(parsedMessage.data.userId);
         lastBird = Date.now();
       break;
