--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
     SCREEN_WIDTH_HALF = SCREEN_WIDTH / 2,
     SCREEN_HEIGHT_HALF = SCREEN_HEIGHT / 2;
 
+  var cameraOffsetX = -2*SCREEN_WIDTH/5;
+
   var MAX_BIRDS = 100; // the amount of birds reach this limit 
   var BIRD_CREATION_ON_INACTIVTY_TIMER = 1; // Create bird if not active for 10 min 
   var BIRD_CREATION_COUNT = 5; // How many birds to create when inactivity timer is reached 
@@ -393,9 +395,10 @@ loader.load(
     }
   );
 
+
   function init() {
 
-    camera = new THREE.OrthographicCamera(-SCREEN_WIDTH /4, SCREEN_WIDTH/4, SCREEN_HEIGHT/4, -SCREEN_HEIGHT/4, -1000, 1000);
+    camera = new THREE.OrthographicCamera(-SCREEN_WIDTH /4-cameraOffsetX, SCREEN_WIDTH/4-cameraOffsetX, SCREEN_HEIGHT/4, -SCREEN_HEIGHT/4, -1000, 1000);
     // camera.position.z = 1000;
 
     scene = new THREE.Scene();
