--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
     SCREEN_WIDTH_HALF = SCREEN_WIDTH / 2,
     SCREEN_HEIGHT_HALF = SCREEN_HEIGHT / 2;
 
+
+var viewportHalfWidth = SCREEN_WIDTH/4;
+var viewportHalfHeight = SCREEN_HEIGHT/4;    
+
   var cameraOffsetX = -2*SCREEN_WIDTH/5;
 
   var MAX_BIRDS = 100; // the amount of birds reach this limit 
@@ -395,10 +399,11 @@ loader.load(
     }
   );
 
-
+var viewportHalfWidth = SCREEN_WIDTH/4;
+var viewportHalfHeight = SCREEN_HEIGHT/4;
   function init() {
 
-    camera = new THREE.OrthographicCamera(-SCREEN_WIDTH /4-cameraOffsetX, SCREEN_WIDTH/4-cameraOffsetX, SCREEN_HEIGHT/4, -SCREEN_HEIGHT/4, -1000, 1000);
+    camera = new THREE.OrthographicCamera(-viewportHalfWidth-cameraOffsetX, viewportHalfWidth-cameraOffsetX, viewportHalfHeight, -viewportHalfHeight, -1000, 1000);
     // camera.position.z = 1000;
 
     scene = new THREE.Scene();
