--- a/index.html
+++ b/index.html
@@ -736,10 +736,10 @@ var viewportHalfHeight = SCREEN_HEIGHT/4;
       // if(j%60 == 0)
       //   console.log("Bird at index "+i+" id"+selectedBird.id+" position "+selectedBird.boid.position.x+","+selectedBird.boid.position.y);
 
-      if(selectedBird.boid.position.x > -SCREEN_WIDTH_HALF
-        && selectedBird.boid.position.x < SCREEN_WIDTH_HALF
-        && selectedBird.boid.position.y > -SCREEN_HEIGHT_HALF
-        && selectedBird.boid.position.y < SCREEN_HEIGHT_HALF)
+      if(selectedBird.boid.position.x > -viewportHalfHeight
+        && selectedBird.boid.position.x < viewportHalfHeight
+        && selectedBird.boid.position.y > -viewportHalfWidth
+        && selectedBird.boid.position.y < viewportHalfWidth)
       {
         on++;
         // On screen. Hide arrow, show circle
