Fix select my bird

--- a/index.html
+++ b/index.html
@@ -736,8 +736,8 @@ var viewportHalfHeight = SCREEN_HEIGHT/4;
       // if(j%60 == 0)
       //   console.log("Bird at index "+i+" id"+selectedBird.id+" position "+selectedBird.boid.position.x+","+selectedBird.boid.position.y);
 
-      if(selectedBird.boid.position.x > -viewportHalfWidth
-        && selectedBird.boid.position.x < viewportHalfWidth
+      if(selectedBird.boid.position.x > -viewportHalfWidth-cameraOffsetX
+        && selectedBird.boid.position.x < viewportHalfWidth+cameraOffsetX
         && selectedBird.boid.position.y > -viewportHalfHeight
         && selectedBird.boid.position.y < viewportHalfHeight)
       {
@@ -783,15 +783,15 @@ var viewportHalfHeight = SCREEN_HEIGHT/4;
 
           selectedBird.arrow.rotation.z = 0;                           
 
-        if(selectedBird.boid.position.x < -viewportHalfWidth)
+        if(selectedBird.boid.position.x < -viewportHalfWidth-cameraOffsetX)
         {
           selectedBird.arrow.rotation.z = Math.PI/2;          
-          pos.x = -viewportHalfWidth;
+          pos.x = -viewportHalfWidth-cameraOffsetX;
         }
-        else if(selectedBird.boid.position.x > viewportHalfWidth)
+        else if(selectedBird.boid.position.x > viewportHalfWidth+cameraOffsetX)
         {
           selectedBird.arrow.rotation.z = -Math.PI/2;                    
-          pos.x = viewportHalfWidth;
+          pos.x = viewportHalfWidth+cameraOffsetX;
         }
 
         if(selectedBird.boid.position.y < -viewportHalfHeight)
