--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 // $("document").ready(function(){
   // Based on http://www.openprocessing.org/visuals/?visualID=6910
 
-  var ratio = 5000/923;
-  var boundariesXrel = [3221/5000,4885/8000];
+  var ratio = 5.79;
+  var boundariesXrel = [0.6622,4885/8000];
   var birdScale = 4;
 
   var SCREEN_WIDTH = window.innerWidth, SCREEN_HEIGHT = window.innerWidth/ratio;
